# llm-model-filter

./: .gitignore  Dockerfile  README.md  config.yaml.default  model_filter.py  pyproject.toml  requirements.in  requirements.txt
