[project]
name = "llm-model-filter"
version = "0.1.2"
description = "An OpenAI-compatible API proxy that filters models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "cachetools>=7.0.5",
    "certifi>=2026.1.4",
    "fastapi>=0.115.2",
    "h11>=0.16.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "starlette>=0.49.1",
    "uvicorn>=0.31.1",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pip-audit>=2.10.0",
]
